@@ -1,0 +1,18 @@
+#   Copyright 2004-2005 by Kevin Smith
+#   released under the MIT-style wxruby2 license
+
+%include "../common.i"
+
+%module(directors="1") wxMiniFrame
+
+%{
+#include <wx/minifram.h>
+%}
+
+%import "include/wxObject.h"
+%import "include/wxEvtHandler.h"
+%import "include/wxWindow.h"
+%import "include/wxFrame.h"
+
+
+%include "include/wxMiniFrame.h"
